# model-evolution-lab

./: main.py  pyproject.toml
notebooks/: 00_Rule_Based_System.ipynb  01_Bag_of_words.ipynb  02_TF_IDF.ipynb  03_Word2Vector.ipynb
